--- a/package.json
+++ b/package.json
@@ -15,36 +15,42 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.43.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "expo": "~51.0.14",
+    "expo": "^51.0.34",
+    "expo-build-properties": "~0.12.5",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.7",
+    "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
-    "expo-splash-screen": "~0.27.5",
+    "expo-location": "~17.0.1",
+    "expo-router": "~3.5.23",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
+    "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "jest-expo": "~51.0.4",
+    "lucide-react-native": "^0.446.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.4",
-    "tailwindcss-animate": "^1.0.7",
-    "expo-secure-store": "~13.0.1",
-    "expo-image-picker": "~15.0.5"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -52,7 +58,7 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
