--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,13 @@
       "@/*": [
         "./*"
       ],
-      "~/*": ["*"]
+      "~/*": [
+        "*"
+      ]
     }
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "**/*.tsx"
   ]
 }
